Updated README with kd stuff

--- a/README
+++ b/README
@@ -28,6 +28,13 @@ Bonuses
  Procedural Shading - "clearly different" shader and "noisy" shader
   Extracted source (samplers) in ./bonus/proctex_bonus
 
+Advanced Topic: Spatial Structures
+
+ Work started with ply2tri and ./kd/*
+  -splitting by median implemented
+  -not yet ready to compile
+  -considering some refactoring
+
 External Sources
 
 rply - ply format parser
